Create Left & Right Sidebar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Book - Easy Tutorials Youtube Channel</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/88ff0574b7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav>
@@ -26,5 +30,98 @@
         </div>
       </div>
     </nav>
+    <div class="container">
+      <!-- -------------------left-sidebar------------------- -->
+      <div class="left-sidebar">
+        <div class="imp-links">
+          <a href="#"><img src="./images/news.png" alt="" /> Latest News</a>
+          <a href="#"><img src="./images/friends.png" alt="" /> Friends</a>
+          <a href="#"><img src="./images/group.png" alt="" /> Group</a>
+          <a href="#"
+            ><img src="./images/marketplace.png" alt="" /> Marketplace</a
+          >
+          <a href="#"><img src="./images/watch.png" alt="" /> Watch</a>
+          <a href="#">See More</a>
+        </div>
+        <div class="shortcut-links">
+          <p>Your Shortcuts</p>
+          <a href="#"
+            ><img src="./images/shortcut-1.png" alt="" /> Web Developers</a
+          >
+          <a href="#"
+            ><img src="./images/shortcut-2.png" alt="" /> Web Design Course</a
+          >
+          <a href="#"
+            ><img src="./images/shortcut-3.png" alt="" /> Full Stack
+            Development</a
+          >
+          <a href="#"
+            ><img src="./images/shortcut-4.png" alt="" /> Website Experts</a
+          >
+        </div>
+      </div>
+      <!-- -------------------main-content------------------- -->
+      <div class="main-content"></div>
+      <!-- -------------------right-sidebar------------------- -->
+      <div class="right-sidebar">
+        <div class="sidebar-title">
+          <h4>Events</h4>
+          <a href="#">See All</a>
+        </div>
+
+        <div class="event">
+          <div class="left-event">
+            <h3>18</h3>
+            <span>March</span>
+          </div>
+          <div class="right-event">
+            <h4>Social Media</h4>
+            <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
+            <a href="#">More Info</a>
+          </div>
+        </div>
+        <div class="event">
+          <div class="left-event">
+            <h3>22</h3>
+            <span>June</span>
+          </div>
+          <div class="right-event">
+            <h4>Mobile Marketing</h4>
+            <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
+            <a href="#">More Info</a>
+          </div>
+        </div>
+
+        <div class="sidebar-title">
+          <h4>Advertisement</h4>
+          <a href="#">Close</a>
+        </div>
+        <img src="./images/advertisement.png" class="sidebar-ads" alt="" />
+
+        <div class="sidebar-title">
+          <h4>Conversation</h4>
+          <a href="#">Hide Chat</a>
+        </div>
+
+        <div class="online-list">
+          <div class="online">
+            <img src="./images/member-1.png" alt="" />
+          </div>
+          <p>Alision Mina</p>
+        </div>
+        <div class="online-list">
+          <div class="online">
+            <img src="./images/member-2.png" alt="" />
+          </div>
+          <p>Jackson Aston</p>
+        </div>
+        <div class="online-list">
+          <div class="online">
+            <img src="./images/member-3.png" alt="" />
+          </div>
+          <p>Samona Rose</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
