Create Story Gallery

--- a/index.html
+++ b/index.html
@@ -61,7 +61,30 @@
         </div>
       </div>
       <!-- -------------------main-content------------------- -->
-      <div class="main-content"></div>
+      <div class="main-content">
+        <div class="story-gallery">
+          <div class="story story1">
+            <img src="./images/upload.png" alt="" />
+            <p>Post Story</p>
+          </div>
+          <div class="story story2">
+            <img src="./images/member-1.png" alt="" />
+            <p>Alision</p>
+          </div>
+          <div class="story story3">
+            <img src="./images/member-2.png" alt="" />
+            <p>Jackson</p>
+          </div>
+          <div class="story story4">
+            <img src="./images/member-3.png" alt="" />
+            <p>Samona</p>
+          </div>
+          <div class="story story5">
+            <img src="./images/member-4.png" alt="" />
+            <p>John Doe</p>
+          </div>
+        </div>
+      </div>
       <!-- -------------------right-sidebar------------------- -->
       <div class="right-sidebar">
         <div class="sidebar-title">
