--- a/index.html
+++ b/index.html
@@ -25,8 +25,56 @@
           <img src="./images/search.png" alt="" />
           <input type="text" placeholder="Search" />
         </div>
-        <div class="nav-user-icon online">
+        <div class="nav-user-icon online" onclick="settingsMenuToggle()">
           <img src="./images/profile-pic.png" alt="" />
+        </div>
+      </div>
+      <!-- -----------------settings-menu----------------- -->
+      <div class="settings-menu">
+        <div class="settings-menu-inner">
+          <div class="user-profile">
+            <img src="./images/profile-pic.png" alt="" />
+            <div class="">
+              <p>John Nicholson</p>
+              <a href="#">See your profile</a>
+            </div>
+          </div>
+          <hr />
+          <div class="user-profile">
+            <img src="./images/feedback.png" alt="" />
+            <div class="">
+              <p>Give Feedback</p>
+              <a href="#">Help us to improve the new design</a>
+            </div>
+          </div>
+          <hr />
+
+          <div class="setting-links">
+            <img src="./images/setting.png" alt="" class="settings-icon" />
+            <a href="#"
+              >Settings & Privacy
+              <img src="./images/arrow.png" width="10px" alt=""
+            /></a>
+          </div>
+          <div class="setting-links">
+            <img src="./images/help.png" alt="" class="settings-icon" />
+            <a href="#"
+              >Help & Support <img src="./images/arrow.png" width="10px" alt=""
+            /></a>
+          </div>
+          <div class="setting-links">
+            <img src="./images/display.png" alt="" class="settings-icon" />
+            <a href="#"
+              >Display & Accessibility
+              <img src="./images/arrow.png" width="10px" alt=""
+            /></a>
+          </div>
+          <div class="setting-links">
+            <img src="./images/logout.png" alt="" class="settings-icon" />
+            <a href="#"
+              >Logout <img src="./images/arrow.png" width="10px" alt=""
+            /></a>
+          </div>
         </div>
       </div>
     </nav>
@@ -332,5 +380,6 @@
     <div class="footer">
       <p>Copyright 2021 - Easy Tutorials Youtube Channel</p>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
