Create Button Change Theme

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       </div>
       <!-- -----------------settings-menu----------------- -->
       <div class="settings-menu">
+        <div id="dark-btn">
+          <span></span>
+        </div>
         <div class="settings-menu-inner">
           <div class="user-profile">
             <img src="./images/profile-pic.png" alt="" />
@@ -48,7 +51,6 @@
             </div>
           </div>
           <hr />
-
           <div class="setting-links">
             <img src="./images/setting.png" alt="" class="settings-icon" />
             <a href="#"
