Create Profile Page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav>
       <div class="nav-left">
-        <img src="./images/logo.png" class="logo" alt="" />
+        <a href="/"><img src="./images/logo.png" class="logo" alt="" /></a>
         <ul>
           <li><img src="./images/notification.png" alt="" /></li>
           <li><img src="./images/inbox.png" alt="" /></li>
@@ -39,7 +39,7 @@
             <img src="./images/profile-pic.png" alt="" />
             <div class="">
               <p>John Nicholson</p>
-              <a href="#">See your profile</a>
+              <a href="/profile.html">See your profile</a>
             </div>
           </div>
           <hr />
